# questionnaire-backend

./: .env.example  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  Procfile  README.md  RustConfig  aliases.js  docker-compose.yml  heroku.yml  index.html  rust-toolchain.toml  search-index.js  settings.html  source-files.js
.travis/: install.sh
implementors/failure/: trait.Fail.js
index/: all.html  fn.main.html  index.html
migrations/2018-10-29-101103_create_question/: down.sql  up.sql
migrations/2018-10-31-032815_create_answers/: down.sql  up.sql
migrations/2019-05-23-032722_create_presentations/: down.sql  up.sql
migrations/2019-05-30-035608_connect_question_presentation/: down.sql  up.sql
migrations/2019-06-11-035145_connect_question_user/: down.sql  up.sql
migrations/2019-06-18-031201_create_options/: down.sql  up.sql
migrations/2019-06-21-031417_connect_answers_options/: down.sql  up.sql
migrations/2020-03-16-031431_create_users/: up.sql
questionnaire_rs/: all.html  constant.GH_USER_SESSION_ID_KEY.html  index.html  sidebar-items.js  type.DbPool.html
questionnaire_rs/answers/: index.html  sidebar-items.js  struct.get.html  struct.get_by_option.html  struct.post.html
questionnaire_rs/error/: enum.Oauth.html  index.html  sidebar-items.js  struct.Db.html
questionnaire_rs/helpers/: index.html  sidebar-items.js
questionnaire_rs/middleware/: index.html  sidebar-items.js  struct.GitHubUserId.html
questionnaire_rs/models/: index.html  sidebar-items.js  struct.Answer.html  struct.AnswerInput.html  struct.GHAccessTokenBody.html  struct.GetAnswerById.html  struct.GetAnswersByOption.html  struct.GetOption.html  struct.GetOptionsByQuestion.html  struct.GetPresentation.html  struct.GetQuestion.html  struct.GetQuestionByPresentation.html  struct.Option.html  (+10 more)
src/: answers.rs  github.rs  github_access_token.rs  index.rs  lib.rs  main.rs  middleware.rs  models.rs  oauth.rs  oauth_error.rs  options.rs  presentations.rs  questions.rs  schema.rs  session.rs  web_socket.rs  web_socket_server.rs
tests/: answers.rs
(+167 files in other folders)
