[package]
name = "questionnaire-rs"
version = "0.1.0"
authors = ["Subhojit Paul <subhojitpaul21@gmail.com>"]

[dependencies]
actix-web = { version = "^0.7", features = ["ssl"] }
diesel = { version = "^1.4", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.13.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
chrono = { version = "0.4.6", features = ["serde"] }
futures = "^0.1"
env_logger = "^0.6"
oauth2 = "^1.3.0"
failure = "^0.1.5"
