[package]
name = "questionnaire-rs"
version = "0.1.0"
authors = ["Subhojit Paul <subhojitpaul21@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "^3.3.2", features = ["openssl"] }
diesel = { version = "^1.4.5", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.13.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
chrono = { version = "0.4.6", features = ["serde"] }
futures = "^0.3.11"
env_logger = "^0.6"
failure = "^0.1.5"
reqwest = "^0.9.14"
actix = { version = "^0.10" }
time = "^0.1.42"
actix-http = "^2.2.1"
actix-cors = "^0.5.4"
actix-session = "^0.4.0"
actix-rt = "^1.1.1"
actix-service = "^1.0.6"
actix-identity = "^0.3.1"
actix-web-actors = "^3.0.0"
rand = "^0.7.3"
actix-broker = "^0.3.1"
